--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,9 +1,9 @@
-DirectoryIndex page_1.html
+DirectoryIndex index.html
 AddDefaultCharset UTF-8
 php_value upload_max_filesize 10M
 
 php_flag  log_errors on
-#php_value error_log  errors/PHP_errors.log
+php_value error_log  errors/PHP_errors.log
 
 #url
 
