--- a/17Home/package.json
+++ b/17Home/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-image": "^5.1.0",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "gulp-sass": "^4.0.2"
